test/checker/pass/check_expr_binary.ms
val x := 1 + 2;
val y := 3 * 4;
