test/checker/fail/check_array_mismatch.ms
val arr := [1, 2, true];
